--- a/staging/frog.html
+++ b/staging/frog.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1; URL=https://www.google.com" />
+<meta http-equiv="refresh" content="1; URL=https://en.wikipedia.org/wiki/Arvin,_California" />
