--- a/staging/frog.html
+++ b/staging/frog.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1; URL=https://en.wikipedia.org/wiki/Arvin,_California" />
+<meta http-equiv="refresh" content="1; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO" />
